# poker_game

./: Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  RESOURCE.md  clippy.toml  rustfmt.toml
client/: Cargo.toml  README.md  bacon.toml  client_prefs.ron
client/.cargo/: config.toml
client/assets/cards/: cards_small.psd
client/assets/config/: window.ron
client/src/: fake_player.rs  main.rs  prelude.rs  user.rs
client/src/animation/: mod.rs  offset.rs  ui_sprite_animation.rs
client/src/core/: assets.rs  audio.rs  mod.rs  pause.rs  popup.rs  timer_test.rs  window.rs
client/src/core/dev_tools/: fps_overlay.rs  inspector.rs  mod.rs  ui.rs  ui_picking.rs
client/src/demo/: animation.rs  level.rs  movement.rs  player.rs
client/src/game/: assets.rs  bincode.rs  event.rs  interaction.rs  mod.rs
client/src/game/dev/: mod.rs  reset.rs
client/src/game/hidden_card/: game.rs  game_event.rs  hands.rs  level.rs  mod.rs  player.rs  seat.rs  stage.rs  state.rs  table.rs
client/src/game/widget/: card.rs  interaction.rs  mod.rs  seat.rs  set.rs  text.rs
client/src/menus/: credits.rs  main.rs  mod.rs  pause.rs  settings.rs
client/src/network/: http_client.rs  init.rs  init_native.rs  init_wasm.rs  mod.rs  native.rs  renet2.rs  wasm.rs
client/src/plugin/: mod.rs  popup.rs
client/src/screens/: gameplay.rs  loading.rs  mod.rs  splash.rs  title.rs
client/src/theme/: interaction.rs  mod.rs  palette.rs  text.rs  widget.rs
client/src/theme/widget/: mod.rs  text.rs
client/src/utils/: js_call.rs  mod.rs
client/src/utils/extend/: mod.rs  val.rs  visibility.rs
client/web/: index.html
client/web/dev/: index.html
container/: podman-compose.yml
container/nginx/conf.d/: default.conf
server/: Cargo.toml  bacon.toml
server/.cargo/: config.toml
server/src/: game_server.rs  http_server.rs  main.rs  renet_server.rs  utils.rs
server/src/game/: mod.rs  room.rs
shared/: Cargo.toml
shared/src/: cards.rs  error.rs  event.rs  lib.rs
shared/src/the_hidden_card/: combination.rs  error.rs  mod.rs  reducer.rs  state.rs
state/: Cargo.toml
state/src/: cards.rs  event.rs  lib.rs  player.rs  state.rs
state/src/the_hidden_card/: combination.rs  error.rs  event.rs  mod.rs  reducer.rs  state.rs
