# Roses are red,
# violets are blue;
# you are the best build tool:
# Cargo, I love you!!!
[workspace]
resolver = "2"

members = [
    "client",
    "server",
    "shared",
]

[patch.crates-io]
#bevy_asset_loader = { git = "https://github.com/benfrankel/bevy_asset_loader.git", branch = "direct-depend" }
#iyes_progress = { git = "https://github.com/benfrankel/iyes_progress.git", branch = "bevy-0-16" }
bevy_editor_pls = { git = "https://github.com/benfrankel/bevy_editor_pls.git", branch = "bevy-0-16" }

renet2 = { git = "https://github.com/suxin1/renet2.git", rev = "fde66f5a" }
renet2_netcode = { git = "https://github.com/suxin1/renet2.git", rev = "fde66f5a"}
renetcode2 = { git = "https://github.com/suxin1/renet2.git", rev = "fde66f5a"}
bevy_renet2 = { git = "https://github.com/suxin1/renet2.git", rev = "fde66f5a"}
bevy_http_client = { git = "https://github.com/suxin1/bevy_http_client.git", rev = "5bb2bd8"}


[workspace.lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"


# Compile with Performance Optimizations:
# <https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations>

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>.
[profile.dev.package.wgpu-types]
debug-assertions = false

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as a single unit.
# Increases build time for large crates; marginal improvements to performance and size.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Increases build time immensely; minimal improvements to performance and size.
#lto = "fat"

# This profile will be used by `bevy run web` automatically.
[profile.web-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind.
# Reduces performance slightly; significant improvements to build time and size.
#opt-level = "s"

# Optimize for build time in CI.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4


[profile.ci.package."*"]
opt-level = 0


