[package]
name = "client"
version = "0.1.0"
edition = "2024"
# TODO: Workaround for <https://github.com/DioxusLabs/dioxus/issues/4160>.
#default-run = "run"


[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    # Core features
    "bevy_audio",
    "bevy_winit",
    "bevy_ui",
    "bevy_ui_picking_backend",

    # Extra features
    "async_executor",
    #"custom_cursor",
    #"default_font",
    "multi_threaded",
    "tonemapping_luts",

    # Platform features
    "wayland",
    "webgl2",
    "x11",

    # File formats
    "png",
    "vorbis",
] }
bevy_asset_loader = { version = "0.23", features = ["2d", "progress_tracking"] }
bevy_common_assets = { version = "0.13", default-features = false, features = [
    "ron",
] }
iyes_progress = "0.14"

bevy_editor_pls = { version = "0.11", features = [
    "highlight_changes",
], optional = true }

bevy_mod_debugdump = { version = "0.13", optional = true }
bevy_simple_prefs = "0.6"
bevy_simple_subsecond_system = { version = "0.1", optional = true }
bevy_state = { version = "0.16", default-features = false }
dirs = { version = "6", optional = true }

lazy-regex = { version = "3", default-features = false, features = ["lite"] }
leafwing-input-manager = { version = "0.17", default-features = false, features = [
    "mouse",
    "keyboard",
    "gamepad",
] }
# Compile low-severity logs out of native builds for performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
#pyri_state = { version = "0.4", default-features = false, features = [
#    "bevy_app",
#    "bevy_reflect",
#    "bevy_state",
#    "react",
#    "stack",
#] }
pyri_tooltip = "0.3"
rand = "0.8"
ron = "0.10"
serde = "1"
tiny_bail = "0.4"
# Compile low-severity logs out of web builds for performance.
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
variadics_please = "1"

[target.wasm32-unknown-unknown.dependencies]
# TODO: Workaround for <https://github.com/rust-random/getrandom/issues/671>.
getrandom = { version = "0.3", features = ["wasm_js"] }

[patch.crates-io]
# TODO: Workaround for <https://github.com/NiklasEi/bevy_asset_loader/issues/219>.
bevy_asset_loader = { git = "https://github.com/benfrankel/bevy_asset_loader.git", branch = "direct-depend" }
bevy_editor_pls = { git = "https://github.com/benfrankel/bevy_editor_pls.git", branch = "bevy-0-16" }
dioxus-devtools = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "b2bd1f" }
# TODO: Workaround for <https://github.com/rust-random/getrandom/issues/671>.
getrandom = { git = "https://github.com/benfrankel/getrandom.git" }


[features]
dev = [
    "bevy/bevy_dev_tools",
    #"bevy/bevy_remote",
    "bevy/bevy_ui_debug",
    #"bevy/configurable_error_handler",
    "bevy/default_font",
    "bevy/dynamic_linking",
    "bevy/glam_assert",
    "bevy/sysinfo_plugin",
    "bevy/track_location",
#    "pyri_state/debug",
]
native = ["dep:dirs"]
native_dev = [
    "native",
    "dev",
    "dep:bevy_editor_pls",
    "dep:bevy_simple_subsecond_system",
    "bevy/file_watcher",
    #"bevy/embedded_watcher",
]
web = []
web_dev = ["web", "dev"]

bevy_mod_debugdump = ["dep:bevy_mod_debugdump"]
trace = ["bevy/trace", "bevy/trace_tracy"]

[package.metadata.bevy_cli.native]
features = ["native"]

[package.metadata.bevy_cli.native.dev]
features = ["native_dev"]

[package.metadata.bevy_cli.web]
features = ["web"]

[package.metadata.bevy_cli.web.dev]
features = ["web_dev"]


[lints]
workspace = true

# See more Bevy lints here: <https://thebevyflock.github.io/bevy_cli/bevy_lint/lints>.
[package.metadata.bevy_lint]
restriction = "warn"
pedantic = "warn"


# TODO: Workaround for <https://github.com/DioxusLabs/dioxus/issues/4160>.
#[[bin]]
#name = "debug"
#required-features = ["bevy_mod_debugdump"]
